# powerpc

./: LICENSE  Makefile  README.md  RELEASE-NOTES  SetupInstrs.hs  Test.hs  common-instructions  powerpc.cabal  test
Language/: PowerPC.hs
Language/PowerPC/: .Disassembler.hs.swp  Branching.hs  Disassembler.hs  Instruction.hs  Instructions.hs  Opcode.hs  RTL.hs  Simulator.hs  Syntax.hs  Utils.hs
Language/PowerPC/Instructions/: Addi.hs  B.hs  Mfmsr.hs  Mfspr.hs  Mtmsr.hs  Mtspr.hs  Ori.hs
