name:    powerpc
version: 0.0.2

category: Language, Embedded

synopsis: Tools for PowerPC programs.

description:
    Analysis tools for PowerPC programs.

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://tomahawkins.org

build-type:    Simple
cabal-version: >= 1.6

library
    build-depends:
        base       >= 4.0     && < 5

    exposed-modules:
        Language.PowerPC
        Language.PowerPC.Instructions
        Language.PowerPC.Opcode
        Language.PowerPC.RTL
        Language.PowerPC.Simulator

    ghc-options:       -W

source-repository head
    type:     git
    location: git://github.com/tomahawkins/powerpc.git

